// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders permalink view 1`] = `
<withPropsOnChange(Flex)
  className="App-root"
  justifyContent="center"
>
  <withContext(withLocalStateContainer(PermalinkViewQuery)) />
</withPropsOnChange(Flex)>
`;

exports[`renders stream 1`] = `
<withPropsOnChange(Flex)
  className="App-root"
  justifyContent="center"
>
  <withContext(withLocalStateContainer(StreamQuery)) />
</withPropsOnChange(Flex)>
`;
